<resources>
    <string name="app_name">ParagliderHelper</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome_page">Paraglider Helper</string>

    <string name="start">START</string>
    <string name="settings">USTAWIENIA</string>
    <string name="sos">S O S</string>
    <string name="message">Potrzebuje pomocy! Mam problemy z paralotnią! Jestem tutaj: </string>
    <string name="notification">Wiadomość SOS wysłana!</string>
    <string name="notification_about_no_numbers">Brak podanego numeru!</string>


    <string name="title_activity_settings_page">SettingsPage</string>
    <string name="personal_data">Dane personalne:</string>
    <string name="first_name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="city">Miasto</string>
    <string name="lanugage">Język:</string>
    <string name="vibrations">Ustawienia wibracji:</string>
    <string name="freq_vibrations_up">Częstotliwość wibracji przy unoszeniu</string>
    <string name="freq_vibrations_down">Częstotliwość wibracji przy opadaniu</string>
    <string name="phone_number_SOS">Numery telefonów do których zostanie wysłane SOS:</string>
    <string name="phone_number_1">Numer telefonu 1</string>
    <string name="phone_number_2">Numer telefonu 2</string>
    <string name="phone_number_3">Numer telefonu 3</string>
    <string name="title_activity_about_app">Mapy</string>
    <string name="description_of_functionality">Opis funkcjonalności:</string>
    <string name="information_about_functionality">\n1) śledzenie trasy w czasie rzeczywistym\n2) SMS S.O.S. na wybrane numery\n3) wibracja informująca o wznoszeniu\n4) dwa dostepne języki</string>
    <string name="authors">Autorzy:</string>
    <string name="about_authors">Dawid Balicki\nMaciej Cymbalista\nKierunek: Informatyka\nWydział: EAIIIB\nAGH, 2018</string>
    <string name="about_application">O APLIKACJI</string>
    <string name="title_activity_maps_page">Mapa</string>
    <string name="title_activity_maps">Mapy</string>


</resources>
