<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    tools:context="com.application.paragliderhelper.SettingsPage">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="546dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/personalDataTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/personal_data"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="357dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <EditText
                android:id="@+id/surnameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/surname"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <EditText
                android:id="@+id/cityEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/city"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/languageTextView"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="0"
                    android:text="@string/lanugage"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <ImageButton
                    android:id="@+id/englandButton"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="8dp"
                    android:scaleType="fitXY"
                    android:scaleX="1"
                    android:scaleY="1"
                    android:src="@drawable/flag_of_england" />

                <ImageButton
                    android:id="@+id/polandButton"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="0"
                    android:scaleType="fitXY"
                    android:scaleX="1"
                    android:scaleY="1"
                    android:src="@drawable/flag_of_poland" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/vibrationsDataTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/vibrations"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/freqTextViewDown"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:text="@string/freq_vibrations_down"
                    android:textSize="14sp"
                    android:textStyle="bold|italic" />

                <SeekBar
                    android:id="@+id/freqSeekBarDown"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:max="10"
                    android:min="1" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/freqTextViewUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:text="@string/freq_vibrations_up"
                    android:textSize="14sp"
                    android:textStyle="bold|italic" />

                <SeekBar
                    android:id="@+id/freqSeekBarUp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:max="10"
                    android:min="1" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/phoneNumberForSosTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/phone_number_SOS"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <EditText
                android:id="@+id/phoneNumberEditText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/phone_number_1"
                android:inputType="phone" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <EditText
                android:id="@+id/phoneNumberEditText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/phone_number_2"
                android:inputType="phone" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <EditText
                android:id="@+id/phoneNumberEditText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:inputType="phone" />
        </TableRow>
    </TableLayout>

</android.support.design.widget.CoordinatorLayout>
